--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "Anyscale",
+        "civilisation's",
         "DALL",
         "Databricks",
         "explicability",
